# VVXAnalysis

./: .gitignore  DATASETSMANAGEMENT.md  README.md  createSymlinks.sh  setup_CMSSW.sh  setup_local.sh
TreeAnalysis/: AnalyzeScriptAll.py  BuildFile.xml  CMakeCache.txt  CMakeLists.txt  G__TreeAnalysis.cxx  MacroReco.C  Makefile  README.md  aGCweighthist.root  cmake_install.cmake  example.txt  libTreeAnalysis.rootmap  libTreeAnalysis_rdict.pcm  merge1618.sh  runData.sh  runScript.sh  scriptAll.py
TreeAnalysis/Plot/: ComandiPlot.py  ComandiPlot.py~  SR_irred_bkg_div.txt  SR_sig+irred_bkg_tot.txt  SR_sig.txt  SR_sig_gg.txt  SR_sig_qq.txt  Stack.py  Stack.py~  Stack_CR2P2F_sigTot+irred_bkg_tot+red_bkg.root  Stack_CR3P1F_sigTot+irred_bkg_tot+red_bkg.root  Stack_SR_compare_red_bkg.root  Stack_SR_compare_red_bkgMCvsDATA.root  Stack_SR_irred_bkg_div.root  Stack_SR_sig+irred_bkg_tot.root  Stack_SR_sig+irred_bkg_tot_FinState.root  Stack_SR_sig.root  Stack_SR_sig_gg.root  Stack_SR_sig_qq.root  Stack_secure.py  provaVar.py  provaVar.py~  scriptStack.py  scriptStack.py~  scriptStack_comparison.py  scriptStack_comparison.py~
TreeAnalysis/Plot/Plot_before271014/: CR2P2F_sigFINstate+bkg_data.txt  CR2P2F_sigINstate+bkg_data.txt  CR3P1F_sigFINstate+bkg_data.txt  CR3P1F_sigINstate+bkg_data.txt  SR_sigFINstate+bkg_data.txt  SR_sigFINstate+irred_bkg_MC.txt  SR_sigFINstate+irred_bkg_data.txt  SR_sigINstate+bkg_data.txt  SR_sigINstate+irred_bkg_MC.txt  SR_sigINstate+irred_bkg_data.txt  Stack_CR2P2F_data_sigFINstate+bkg.root  Stack_CR2P2F_data_sigINstate+bkg.root  Stack_CR3P1F_data_sigFINstate+bkg.root  Stack_CR3P1F_data_sigINstate+bkg.root  Stack_SR_MC_sigFINstate+irred_bkg.root  Stack_SR_MC_sigINstate+irred_bkg.root  Stack_SR_data_red_bkg.root  Stack_SR_data_sigFINstate+bkg.root  Stack_SR_data_sigFINstate+irred_bkg.root  Stack_SR_data_sigINstate+bkg.root  Stack_SR_data_sigINstate+irred_bkg.root
TreeAnalysis/Plot/Temp29/: Stack_SR_compare_red_bkg.root  Stack_SR_irred_bkg_div.root  Stack_SR_red_bkg.root  Stack_SR_sig+irred_bkg_tot.root
TreeAnalysis/Plot/Temp3/: SR_compare_red_bkg.txt  SR_irred_bkg_div.txt  SR_sig+irred_bkg_tot.txt  Stack_SR_sig.root  (+7 more)
TreeAnalysis/combine/: 2016_SR4P.txt  CR2P2F_mZZGloose.json  CR3P1F_mZZGloose.json  CR4L_mZZGloose.json  CR4P_1F_lepCR_mZZGfail.json  SR3P_phoCR_lepMC_mWZGloose.json  SR3P_phoMC_lepMC_kinMVA.json  SR3P_phoMC_lepMC_mWZGloose.json  SR4P_phoCR_lepCR_mZZGloose.json  SR4P_phoCR_lepCR_mZZGlooseWggZZ.json  SR4P_phoCR_lepCR_mZllplusZllGloose.json  SR4P_phoMC_lepCR_MVAcut.json  SR4P_phoMC_lepCR_kinMVA.json  SR4P_phoMC_lepCR_looseMVA.json  SR4P_phoMC_lepCR_loosept.json  SR4P_phoMC_lepCR_mZZGloose.json  SR4P_phoMC_lepCR_mZZGwp80.json  SR4P_phoMC_lepCR_mZZGwp90.json  SR4P_phoMC_lepCR_mZllplusZllGloose.json  SR4P_phoMC_lepCR_wp90pt.json  phoMCsplit_lepCR_kinMVA.json  splitPrompt.json  template_SR.txt
TreeAnalysis/data/: createCVS.py  fakeRates_el.root  fakeRates_mu.root  samples_8TeV.csv  systematics_2016.json
TreeAnalysis/interface/: AnalysisConfiguration.h  AnalysisFactory.h  Colours.h  CrossAnalyzer.h  DBGenerator.h  EventAnalyzer.h  FakeRateAnalyzer.h  GenEventAnalyzer.h  Histogrammer.h  MCInfo.h  PPZZAnalyzer.h  RegistrableAnalysis.h  SampleInfo.h  VBSMCAnalyzer.h  VBSRecoAnalyzer.h  VVGammaAnalyzer.h  VVXAnalyzer.h  VVXnocutsAnalyzer.h  VVjjHelper.h  VZGAnalyzer.h  VZGammaAnalyzer.h  VZZAnalyzer.h  VZZAnalyzer_impl.h  VZZaQGCAnalyzer.h  WWosAnalyzer.h  WZAnalyzer.h  WZZAnalyzer.h  WlllnuAnalyzer.h  ZVAnalyzer.h  ZZMCAnalyzer.h  ZZMCWAnalyzer.h  ZZRecoAnalyzer.h  ZZRecoWAnalyzer.h  ZZSAnalyzer.h  ZZWAnalyzer.h  ZZWSRDefinition.h  ZZjAnalyzer.h  ZZjGenAnalyzer.h  ZZjjAnalyzer.h
TreeAnalysis/macros/: CutEfficiency.C  Draw.C  Draw_variables.C  HistoCombine.C  LL.C  PPZZPlotter.C  PurityAndStability.C  ResponseMatrix_builder.C  ResponseMatrix_builder_JE.C  ResponseMatrix_builder_JE_PowhegSet.C  ResponseMatrix_builder_PowhegSet.C  SignalHisto_data.C  SignalHisto_data_JES.C  Significance.h  VZGCutHelper.C  VZGammaRecoEfficiencyAnalysis.C  VZZAnalysis.C  VZZCutEfficiency.C  VZZDistributionComparison.C  VZZGraphs.C  VZZRecoEfficiencyAnalysis.C  VZZSignalAnalysis.C  VZZStacks.C  VZZaQGCEfficiency.C  WWosCutAnalysis.C  WWosEfficiencyAnalysis.C  WWosStackGraphs.C  WZZEfficiencyAnalysis.C  aGCReconstructedPlot.C  plotDrawer.C  testSignificance.C
TreeAnalysis/predictors/: VZZ_AK4_tree.pkl  VZZ_AK8_tree.pkl  VZZ_Evt_tree.pkl
TreeAnalysis/python/: Acceptance.py  CMS_lumi.py  Colours.py  ComputeCross.py  CrossCheck.py  CrossInfo.py  CrossSection.py  FakeHistos.py  LL.py  LatexUtils.py  LatexUtils_v2.py  LikelihoodXS.py  PPSrunall.py  PPSrunalleras.py  PersonalInfo.py  PlotFake.py  PlotStyle.py  SetHistos.py  VZZ_AK4Tag.ipynb  VZZ_AK8Tag.ipynb  VZZ_ML.ipynb  VZZhelper.py  ZZj4lReco.py  ZZj4lReco_Mods.py  checkDuplicates.py  comparePlots.py  compareSamples.py  computeFakeRate.py  computeInlcusiveCross.py  computeInlcusiveCrossFromDatacard.py  dataCardProducer.py  debugFRin3L.py  dumpTreeContent.py  efficiency.py  generatorComparison.py  json2TH2F.py  lheFilter.py  lheToRoot.py  makeNicePlots.py  make_vclean.py  (+31 more)
TreeAnalysis/scripts/: AnalyzeScriptAll.py  check_condor_analysis.sh  createCondorJobs.py  createJobs.py  gather_condor_results.sh  getInternalXsec.cxx  hadd_result_data.sh  hadd_result_parts.sh  makePhFR.py  merge1618.sh  process_results.sh  recoScript.py  runMC.sh  rundata.sh  sytematics_table.py
TreeAnalysis/src/: AnalysisFactory.cc  CrossAnalyzer.cc  DBGenerator.cc  EventAnalyzer.cc  EventAnalyzer.h  FakeRateAnalyzer.cc  GenEventAnalyzer.cc  MCInfo.cc  PPZZAnalyzer.cc  SampleInfo.cc  VBSMCAnalyzer.cc  VBSRecoAnalyzer.cc  VVGammaAnalyzer.cc  VVXAnalyzer.cc  VVXnocutsAnalyzer.cc  VVjjHelper.cc  VZGAnalyzer.cc  VZGammaAnalyzer.cc  VZZAnalyzer.cc  VZZaQGCAnalyzer.cc  WWosAnalyzer.cc  WZAnalyzer.cc  WZZAnalyzer.cc  WlllnuAnalyzer.cc  ZVAnalyzer.cc  ZZMCAnalyzer.cc  ZZMCWAnalyzer.cc  ZZRecoAnalyzer.cc  ZZRecoWAnalyzer.cc  ZZSAnalyzer.cc  ZZWAnalyzer.cc  ZZWAnalyzer.h  ZZWSRDefinition.cc  ZZjAnalyzer.cc  ZZjGenAnalyzer.cc  ZZjjAnalyzer.cc  eventAnalyzer.cpp
(+301 files in other folders)
